--- a/css/styles.css
+++ b/css/styles.css
@@ -5,8 +5,24 @@ body {
     overflow: auto;
 }
 
-.container {
-    margin: 0% 20% 0% 20%;
-    width: 60%;
+header {
+    height: 5%;
+    background-color: #555;
+}
 
+.container {
+    background-color: #999;
+    height:50%;
+    margin: 5% 15% 15% 15%;
+    width: 70%;
+}
+
+.container h1 {
+    text-align: center;
+    font-size: 2em;
+}
+
+.mainText {
+    margin: 5% 15% 0% 15%;
+    background-color: #333;
 }
