--- a/css/styles.css
+++ b/css/styles.css
@@ -1,39 +1,76 @@
+@import url('https://fonts.googleapis.com/css?family=Inconsolata');
+
 body {
     margin: 0;
-    background-color: #777;
+    background-color: #252839;
     height:auto;
     overflow: auto;
-    color: #777;
+    font-family: 'Inconsolata', monospace;
 }
 
 header {
     height: 5%;
-    background-color: #555;
+    background-color: #f2b632;
+}
+
+header a {
+    text-decoration: none;
+    font-size: 2.5em;
+    font-weight: bolder;
+    margin-left: 1%;
+    color: #252839;
 }
 
 .container {
-    background-color: #999;
     height:50%;
-    margin: 5% 15% 15% 15%;
-    width: 70%;
+    margin: 5% 20% 15% 20%;
+    width: 60%;
+    border-radius: 10px;
+    background-color:#b5b5b7;
 }
 
 .container h1 {
     text-align: center;
-    font-size: 2em;
+    font-size: 5em;
+    padding-top: 5%;
 }
 
 .mainText {
     margin: 5% 15% 0% 15%;
-    background-color: #333;
+    font-size: 1.5em;
+    text-align: center;
 }
 
-.container #generate {
+.container #generate, #create {
     float: left;
-    margin: 5% 0% 0% 15%;
+    margin: 10% 0% 0% 15%;
+    font-size: 1.5em;
+    background-color: #677077;
+    border-color: #444;
+    color: white;
+    font-family: 'Inconsolata', monospace;
+    cursor: pointer;
 }
 
 .container #create {
     float:right;
-    margin: 5% 15% 0% 0%;
+    margin: 10% 15% 0% 0%;
+    font-size: 1.5em;
+}
+
+#generate:hover, #create:hover {
+    background-color: #333;
+}
+
+
+@media screen and (max-width: 855px) {
+    body {
+        width: 855px;
+    }
+}
+
+@media screen and (max-height:840px) {
+    body {
+        height:840px;
+    }
 }
